--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "axios": "^1.5.0",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
   },
   "engines": {
     "node": ">=14"
